Added Stroke Sizes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
   </head>
   <body>
     <div id="button_div">
+      <b style="text-align: inherit">Colours</b>
       <button class="color_button" id="red" style="background-color: #ff0000;"></button>
       <button class="color_button" id="blue" style="background-color: #0000ff;"></button>
       <button class="color_button" id="green" style="background-color: #00ff00;"></button>
       <button class="color_button" id="black" style="background-color: #000000;"></button>
       <button class="color_button" id="white" style="background-color: #ffffff;"></button>
       <button class="color_button" id="purple" style="background-color: #4169E1;"></button>
+      <b style="text-align: inherit">Pen sizes</b>
+      <button class="size_button" id="size_1">1</button>
+      <button class="size_button" id="size_2">2</button>
+      <button class="size_button" id="size_3">3</button>
+      <button class="size_button" id="size_4">4</button>
+      <button class="size_button" id="size_5">5</button>
+      <button class="size_button" id="size_6">6</button>
+      <b style="text-align: inherit">Shapes</b>
       <button class="shape_button" id="Rectangle">Rectangle</button>
       <button class="shape_button" id="Ellipse">Ellipse</button>
       <button class="shape_button" id="Line">Line</button>
+      <b style="text-align: inherit">Processes</b>
       <button class="process_button" id="Undo">Undo</button>
       <button class="process_button" id="Redo">Redo</button>
       <button class="process_button" id="Clear">Clear</button>
